# djiffy

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  changelog.html  codedocs.html  genindex.html  index.html  manage.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: sphinx_docs.yml  unit_tests.yml
_modules/: index.html
_modules/djiffy/: importer.html  models.html  views.html
_modules/djiffy/management/commands/: import_manifest.html
ci/: testsettings.py
djiffy/: __init__.py  admin.py  apps.py  importer.py  models.py  test_urls.py  tests.py  urls.py  views.py
djiffy/fixtures/: cc_by_nc_nd.rdf  chto-manifest.json  cotsen-collection-manifest.json  manifest-noseq.json  rightsstatement_org_NKC.json
djiffy/management/commands/: import_manifest.py
djiffy/migrations/: 0001_initial.py  0001_squashed_0004_migrate_jsonfield.py  0002_ifbook_metadata.py  0002_manifest_extra_data.py  0002_view_permissions.py  0003_add_extra_data_canvas.py  0003_extra_data_revisions.py  0004_migrate_jsonfield.py
djiffy/static/css/: djiffy.css
djiffy/static/js/: deepzoom.js
djiffy/templates/djiffy/: base.html  book_detail.html  book_list.html  canvas_detail.html  manifest_detail.html  manifest_list.html  page_detail.html
djiffy/templates/djiffy/snippets/: book_card.html  canvas_card.html  manifest_card.html  page_card.html
docs/: .buildinfo  changelog.html  codedocs.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/djiffy/: importer.html  models.html  views.html
docs/_modules/jsonfield/: subclassing.html
docs/_sources/: codedocs.rst.txt
docs/_static/: documentation_options.js
sphinx-docs/: Makefile  conf.py  index.rst
sphinx-docs/_static/: style.css
sphinx-docs/_templates/: sidebar_footer.html
(+3 files in other folders)
